--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,8 @@
-<%= @artist.songs.each do |song| %>
-<%= link_to song.title, song_path(song) %>
-<% end %>
+<h1><%= @artist.name %></h1>
+<ul>
+  <% @artist.songs.each do |song| %>
+    <li>
+      <%= link_to song.title, song_path(song) %>
+    </li>
+  <% end %>
+</ul>
